<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="popular_menu">Popular</string>
    <string name="top_rated_menu">Top Rated</string>
    <string name="now_playing_menu">Now Playing</string>
    <string name="upcoming_menu">Upcoming</string>
    <string name="my_favorite_menu">My Movies</string>
    <string name="server_error_message">Server data type changed</string>
    <string name="no_data_message">Sorry the results is empty</string>

    <string name="add_favorite">Added to Favorites</string>
    <string name="remove_favorite">Removed from Favorites</string>
    <string name="no_favorites_items">No Favorites</string>
    <string name="no_favorites_msg">Please click on favorite button to save</string>
</resources>
